# LegoNano

./: .coverage  .gitignore  README.md  SUPERVISOR_BLUEPRINT.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/design-system/: LegoNanoBot_NextGen_Frontend_Design_System.md
docs/prd/: LegoNanoBot_NextGen_Backend_PRD.md  LegoNanoBot_NextGen_Frontend_PRD.md  LegoNanoBot_NextGen_PRD.md  LegoNanoBot_NextGen_UI_Design_Guidelines.md
docs/supervisor/: README.md  SUPERVISOR_BLUEPRINT.md  webconsole-phase-1.md
docs/supervisor/release-notes/: phase-0-mvp.md  phase-1-production-hardening.md  phase-5-memory-and-context.md  phase-6-webconsole-operations-console.md
examples/channel-plugin-dingtalk-richtext/: README.md  pyproject.toml
examples/channel-plugin-dingtalk-richtext/src/nanobot_plugin_dingtalk_richtext/: __init__.py  channel_factory.py
nanobot/WebConsoleServer/: __init__.py  api.py  summary.py  views.py
nanobot/channels/: channel_plugins.py  manager.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/supervisor/: __init__.py  app.py  models.py  planner.py  registry.py  watchdog.py
nanobot/worker/: __init__.py  client.py  runner.py
nanobot/xray/: __init__.py  app.py  collector.py  events.py  observer.py  sse.py
tests/: test_channel_plugins.py  test_commands.py  test_supervisor_api.py  test_supervisor_integration.py  test_supervisor_models.py  test_supervisor_planner.py  test_supervisor_registry.py  test_supervisor_session_store.py  test_webconsole_server.py  test_worker_client.py  test_worker_runner.py
(+23 files in other folders)
