[project]
name = "nanobot-channel-dingtalk-richtext-plugin"
version = "0.1.0"
description = "Example nanobot channel plugin extending DingTalk with richtext and attachment download"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.4",
    "dingtalk-stream>=0.24.0",
    "httpx>=0.28.0",
]

[project.entry-points."nanobot.channel_factories"]
dingtalk-richtext = "nanobot_plugin_dingtalk_richtext.channel_factory:create_channel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_plugin_dingtalk_richtext"]
